# ChangeLog for media-gfx/graphviz
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/graphviz/ChangeLog,v 1.159 2008/05/13 13:00:12 armin76 Exp $

  13 May 2008; Raúl Porcel <armin76@gentoo.org> graphviz-2.18.ebuild:
  alpha/ia64 stable wrt #221843

  13 May 2008; Joseph Jezak <josejx@gentoo.org> graphviz-2.18.ebuild:
  Marked ppc/ppc64 stable for bug #221843.

  12 May 2008; Christian Faulhammer <opfer@gentoo.org> graphviz-2.18.ebuild:
  stable x86, bug 221843

  11 May 2008; Markus Meier <maekke@gentoo.org> graphviz-2.12.ebuild,
  graphviz-2.16.1.ebuild, graphviz-2.16.1-r4.ebuild, graphviz-2.18.ebuild:
  add missing flex dependency, bug #221391

  12 Apr 2008; Markus Meier <maekke@gentoo.org> graphviz-2.18.ebuild:
  add java USE-flag for bug #186372 and disable R-bindings for bug #213825

  10 Apr 2008; Markus Meier <maekke@gentoo.org> -graphviz-2.16.1-r1.ebuild,
  -graphviz-2.16.1-r2.ebuild, -graphviz-2.16.1-r3.ebuild:
  old

  10 Apr 2008; Kenneth Prugh <ken69267@gentoo.org>
  graphviz-2.16.1-r4.ebuild:
  amd64 stable, bug #216580

  07 Apr 2008; Brent Baude <ranger@gentoo.org> graphviz-2.16.1-r4.ebuild:
  stable ppc, bug 216580

  07 Apr 2008; Raúl Porcel <armin76@gentoo.org> graphviz-2.16.1-r4.ebuild:
  alpha/ia64/sparc stable wrt #216580

  07 Apr 2008; Brent Baude <ranger@gentoo.org> graphviz-2.16.1-r4.ebuild:
  stable ppc64, bug 216580

  07 Apr 2008; Jeroen Roovers <jer@gentoo.org> graphviz-2.16.1-r4.ebuild:
  Stable for HPPA (bug #216580).

  07 Apr 2008; Dawid Węgliński <cla@gentoo.org> graphviz-2.16.1-r4.ebuild:
  Stable on x86 (bug #216580)

  16 Mar 2008; Markus Meier <maekke@gentoo.org> graphviz-2.18.ebuild:
  don't trust the cp...

*graphviz-2.18 (16 Mar 2008)

  16 Mar 2008; Markus Meier <maekke@gentoo.org> +graphviz-2.18.ebuild:
  version bump (reported in bug #213609), this should also fix the
  libtool-2.2 breakage (bug #212755). Our patches aren't needed anymore, I