@@ -15,9 +15,9 @@ AUX graphviz-2.18-interix.patch 472 RMD160 e7f228ce0fe3c75a95c6901e19db4a8d29ab4
 DIST graphviz-2.12.tar.gz 4607023 RMD160 68d55176cd5ce0e6a25c90b443529747e738d5c6 SHA1 aa48a926395a57c6c7e1e755b9432a29461538e3 SHA256 5191892d7950c28754659f703234f7888f132440a049f0d396f287b202f9e37f
 DIST graphviz-2.16.1.tar.gz 8076271 RMD160 6d0f23fa176a1bef7ee0ca48cf1b700fe6cbfb42 SHA1 46b704bd9b81922bcd17167c88f3278a9645e894 SHA256 32c1a185ba39961935f104cc47d2bceea327c0de8c5636edc6ab83ac3c0c56d1
 DIST graphviz-2.18.tar.gz 13322519 RMD160 2c7f23af1a9e480ab6cc5f5f39edad7a5da3ceae SHA1 b638181cf776bc4bb1fa8f95525a3943feb18b4a SHA256 6bc51969fa54c6ee3e64d8a4277c576931d50577b02114115668eeb5e515b42c
-EBUILD graphviz-2.12.ebuild 5806 RMD160 6419f627cbe4b968ca6648fa97566fc7d214e924 SHA1 a9ebf71a4a30a5154701e2854f3df4177a819234 SHA256 75b78f4a51d92c3f7edd31cee63d5e61fda824070b42696014e4a18e456e6d71
-EBUILD graphviz-2.16.1-r4.ebuild 6241 RMD160 241cc51462cad058c294e85f0352f056b0ff4118 SHA1 b7682182fa519cdb67af03915178dbd53fc338c3 SHA256 147914dc0f2129baad1073071a804fa87f9ae5fab4af9f7416f1d64fb202246a
-EBUILD graphviz-2.16.1.ebuild 6172 RMD160 ae581ceb80985c9ac20bfc07e9dd9625f1f9760c SHA1 50996b31d132743d9c0d190e5a4b76f1f144b350 SHA256 26422e8abb3a796f7c9a726a316d378b49d14183f72f36bee35fa78618689631
-EBUILD graphviz-2.18.ebuild 6239 RMD160 22a75a73ea54799b451d09f61b81db07b173a254 SHA1 6fe9e7672a261487959f00ad79fd4367ef8de9e6 SHA256 014f8799f5ccf41eb7fb8565d42c5956b1ecffe9065a63f998437e3b22b43626
-MISC ChangeLog 24054 RMD160 760382a05ecdce2cce3893b1036a5b9c561ab103 SHA1 4eabc31edf725c32b7dcb4a003398133e9fec0b6 SHA256 32438f622c761540672c5d224da61879dddddeb6382c0e9c9fa640fd52161ff1
+EBUILD graphviz-2.12.ebuild 5782 RMD160 23b7f653c5268c06dbb9e2f57e949e8f9624fa97 SHA1 9eae79fd0e55237dc77ba6858cb139aa9484b441 SHA256 8fa03f2b557a6e1916a38d21dafe293368c8eae2d9659ed865f6246c5fd4ec98
+EBUILD graphviz-2.16.1-r4.ebuild 6217 RMD160 e5537ae5a9777a96fde2c3d8bc77c94bdd3f7a2b SHA1 855a033832bc1425db4657d0a25adda686a6a95c SHA256 2a4aa742c41a42a4588b82e445e230323c39995e516a9d5c8590244f3090f0f5
+EBUILD graphviz-2.16.1.ebuild 6148 RMD160 20bcd1fa482e61d3f024690255e32f1394f32c33 SHA1 a8baefb906889f9b034126a698eb90f2a917f816 SHA256 287a9e295952b72adc343947138e7b3621fc63efb5a7fa9c32e60614c6b0b7ab
+EBUILD graphviz-2.18.ebuild 6214 RMD160 740ff8f38aeede9a11fa97563d3162020339269e SHA1 99f19d58d10d1609207eb5edc3c70967bccf4866 SHA256 6db7cef4809af22e432cc934b8bfe8ff3afd06218b083c669045559dd7c21b72
+MISC ChangeLog 24152 RMD160 438f1a6e6bae3503db8515f9d3fef7dd216c4e09 SHA1 0ab22067140911ad66b6183f16725bf4c25523ca SHA256 a01199c5715f2c57fd8cff7c6cfc14c2f3a74ddb98fb5bfcfdbeb7370cb8cd76
 MISC metadata.xml 1540 RMD160 4652a8cc1044e37e34e06be5480a9ee6f842c333 SHA1 b493bbaade7ae395c87ada0bbef0b0f0e7f7fb08 SHA256 c2a220f962a3048cc026e4c376b6555bfd0be7b401206d0ae3d265d628f231a1
